<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>net.jrodolfo</groupId>
	<artifactId>java-evolution</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>java-evolution</name>
	<description>Didactic Java reference project demonstrating features introduced from Java 1 through Java 27.</description>
	<url>https://github.com/jrodolfo/java-evolution</url>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/license/mit</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>jrodolfo</id>
			<name>Rod Oliveira</name>
			<url>https://jrodolfo.net</url>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:https://github.com/jrodolfo/java-evolution.git</connection>
		<developerConnection>scm:git:https://github.com/jrodolfo/java-evolution.git</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/jrodolfo/java-evolution</url>
	</scm>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>27</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>require-java-27</id>
						<phase>validate</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>[27,28)</version>
									<message>
										Java 27 is required to build Java Evolution.
										Maven is using another Java runtime.

										Select Java 27 using one of the repository scripts:

										  source scripts/use-java-27-mac.sh
										  source scripts/use-java-27-linux.sh
										  source scripts/use-java-27-windows.sh
										  . .\scripts\use-java-27-windows.ps1

										Then verify with:

										  java --version
										  mvn --version
									</message>
								</requireJavaVersion>
							</rules>
							<fail>true</fail>
							<failFast>true</failFast>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xshare:off --enable-native-access=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<encoding>${project.build.sourceEncoding}</encoding>
					<docencoding>${project.build.sourceEncoding}</docencoding>
					<charset>${project.build.sourceEncoding}</charset>
					<doclint>none</doclint>
					<outputDirectory>${project.build.directory}/site</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
